# lkm-misc

./: .gitignore  Makefile.am  README.md  configure.ac
include/: Makefile.am  bnotify.h
src/: Kbuild  Makefile.am  bnotify.c
